[gd_scene load_steps=2 format=3 uid="uid://cm2j47mfkqk83"]

[ext_resource type="Script" path="res://scripts/ui/shop_ui.gd" id="1_shop_ui"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_shop_ui")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SHOP"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
custom_minimum_size = Vector2(0, 40)

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gold: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ItemsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
custom_minimum_size = Vector2(0, 200)

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
custom_minimum_size = Vector2(0, 40)
